# baleforgit

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  NOTICE  README.md  cliff.toml
.github/workflows/: build.yml  ci.yml  edge.yml  release-prep.yml  release.yml
crates/bale-server-authz-http/: Cargo.toml
crates/bale-server-authz-http/src/: lib.rs
crates/bale-server-authz-mem/: Cargo.toml
crates/bale-server-authz-mem/src/: lib.rs
crates/bale-server-bin/: Cargo.toml  build.rs
crates/bale-server-bin/src/: main.rs  telemetry.rs
crates/bale-server-core/: Cargo.toml
crates/bale-server-core/src/: lib.rs
crates/bale-server-http/: Cargo.toml
crates/bale-server-http/src/: lib.rs  metrics.rs
crates/bale-server-meta-common/: Cargo.toml
crates/bale-server-meta-common/src/: lib.rs
crates/bale-server-meta-postgres/: Cargo.toml
crates/bale-server-meta-postgres/src/: lib.rs
crates/bale-server-meta-sqlite/: Cargo.toml
crates/bale-server-meta-sqlite/src/: lib.rs
crates/bale-server-shard/: Cargo.toml
crates/bale-server-shard/src/: lib.rs  xorb.rs
crates/bale-server-storage-fs/: Cargo.toml
crates/bale-server-storage-fs/src/: lib.rs
crates/bale-server-storage-mem/: Cargo.toml
crates/bale-server-storage-mem/src/: lib.rs
crates/bale-server-storage-s3/: Cargo.toml
crates/bale-server-storage-s3/src/: lib.rs
crates/bale-server-tokens/: Cargo.toml
crates/bale-server-tokens/src/: lib.rs
crates/bale-server-wire/: Cargo.toml
crates/bale-server-wire/src/: lib.rs
crates/git-bale/: Cargo.toml
crates/git-bale/examples/: profile_clean.rs
crates/git-bale/scripts/: profile_diff.sh
crates/git-bale/src/: clean_cache.rs  config.rs  filter_process.rs  fs_util.rs  gc.rs  install.rs  lib.rs  local_reconstruct.rs  main.rs  manifest_cache.rs  pktline.rs  pointer.rs  progress.rs  prune.rs  push_pending.rs  remote.rs  remote_manifest.rs  resolver.rs  staging.rs  store.rs  track.rs
crates/git-bale/src/mount/: diff.rs  mod.rs  reader.rs  vfs.rs
crates/git-bale/src/mount/backend/: libfuse.rs  mod.rs  winfsp.rs
demo-docker/: README.md  compose.yml
demo-docker/scripts/: bootstrap.py
docs/: ARCHITECTURE.md  BALE_FORGE_PROTOCOL.md  CLEAN_FILTER_PERF.md  DATA_LOSS_AUDIT.md  DEVELOPMENT.md  SERVER.md  SMART_DEDUP.md  STATUS.md
docs/superpowers/plans/: 2026-05-31-git-bale-local-mode.md
docs/superpowers/specs/: 2026-05-31-git-bale-local-mode-design.md
packaging/macos/: git-bale.entitlements
tests/e2e/: Dockerfile  README.md  entrypoint.sh  run.py  run_matrix.py  s3lib.py
tests/e2e/baleharness/: __init__.py  cli.py  client.py  config.py  coverage.py  covstate.py  gitutil.py  jwtutil.py  logutil.py  mocks.py  mount.py  payloads.py  pgbackend.py  proc.py  registry.py  repo.py  runtime.py  s3backend.py  server.py  state.py  storage.py  timing.py  usage.py  winfsp.py
tests/e2e/baleharness/phases/: __init__.py  adversarial.py  anon.py  compression.py  coverage_phases.py  dedup_shard.py  failure.py  gc.py  local.py  mount.py  progress.py  push_pending.py  resync.py  scenario.py  track.py
