[package]
name = "bale-server-http"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
blake3.workspace = true
bytes.workspace = true
hex.workspace = true
hmac.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
bale-server-core.workspace = true
bale-server-wire.workspace = true
bale-server-shard.workspace = true
bale-server-tokens.workspace = true
