[package]
name = "bale-server-meta-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
sqlx.workspace = true
tracing.workspace = true
bale-server-core.workspace = true
bale-server-meta-common.workspace = true
