[package]
name = "bale-server-storage-s3"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config = { version = "=1.8.13", default-features = false, features = ["rt-tokio", "rustls", "behavior-version-latest"] }
aws-credential-types = "=1.2.14"
aws-sdk-s3 = { version = "=1.122.0", default-features = false, features = ["rt-tokio", "rustls", "behavior-version-latest", "default-https-client"] }
bytes.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true
bale-server-core.workspace = true
