[package]
name = "git-bale"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "git-bale"
path = "src/main.rs"

[lib]
name = "git_bale"
path = "src/lib.rs"

[features]
# Enabled by the e2e harness's --coverage build alongside RUSTFLAGS=-C
# instrument-coverage. Adds an explicit __llvm_profile_write_file() call
# after fuse_main_real because libfuse-t kills the process by SIGPIPE on
# unmount, before atexit can flush .profraw files. No effect in prod
# builds.
coverage = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
clap = { version = "=4.5.50", features = ["derive"] }
fs4 = { version = "=0.12.0", features = ["sync"] }
gix = "=0.84.0"
hex.workspace = true
libc = "=0.2.186"
libloading = "=0.8.6"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
twox-hash = { version = "=2.1.2", default-features = false, features = ["xxhash3_64", "std"] }
tracing-subscriber.workspace = true
xet-data = "=1.5.2"
xet-core-structures = "=1.5.2"
xet-client = "=1.5.2"
xet-runtime = "=1.5.2"
